--- a/index.html
+++ b/index.html
@@ -52,41 +52,77 @@
 
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
   <style>
-    body {
+    body, html {
+      margin: 0;
+      padding: 0;
+      height: 100%;
       font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
     }
+
     .hero {
-      background: linear-gradient(rgba(0,0,0,0.4), rgba(0,0,0,0.7)), url('https://player.vimeo.com/video/520026368?muted=1&autoplay=1&loop=1&background=1&app_id=122963') center/cover no-repeat;
+      position: relative;
+      height: 100vh;
+      overflow: hidden;
       color: white;
-      padding: 100px 0;
       text-align: center;
+      display: flex;
+      align-items: center;
+      justify-content: center;
     }
+
+    .hero iframe {
+      position: absolute;
+      top: 50%;
+      left: 50%;
+      min-width: 100%;
+      min-height: 100%;
+      width: auto;
+      height: auto;
+      z-index: -1;
+      transform: translate(-50%, -50%);
+      pointer-events: none;
+    }
+
+    .hero .content {
+      position: relative;
+      z-index: 2;
+      background: rgba(0, 0, 0, 0.5);
+      padding: 30px;
+      border-radius: 15px;
+    }
+
     .section-title {
       margin-top: 50px;
       margin-bottom: 20px;
     }
+
     .footer {
       background-color: #212529;
       color: white;
       padding: 40px 0;
       margin-top: 50px;
     }
+
     .footer a {
       color: #ccc;
       text-decoration: none;
     }
+
     .footer a:hover {
       color: white;
     }
+
     .contact-section {
       padding: 60px 0;
     }
+
     .map-responsive {
       overflow: hidden;
       padding-bottom: 56.25%;
       position: relative;
       height: 0;
     }
+
     .map-responsive iframe {
       left: 0;
       top: 0;
@@ -94,6 +130,7 @@
       width: 100%;
       position: absolute;
     }
+
     .service-box {
       padding: 20px;
       margin-bottom: 20px;
@@ -102,6 +139,7 @@
       background-color: #f8f9fa;
       transition: 0.3s;
     }
+
     .service-box:hover {
       background-color: #e2f0ff;
       transform: scale(1.02);
@@ -110,9 +148,10 @@
 </head>
 <body>
 
-  <!-- Hero Section -->
+  <!-- Hero Section with Vimeo Video -->
   <section class="hero">
-    <div class="container">
+    <iframe src="https://player.vimeo.com/video/520026368?muted=1&autoplay=1&loop=1&background=1&app_id=122963" frameborder="0" allow="autoplay; fullscreen" allowfullscreen></iframe>
+    <div class="content">
       <h1 class="display-4 fw-bold">King Tide Marketing</h1>
       <p class="lead">Helping businesses rank higher, convert faster, and retain more customers with expert SEO, digital ads, email marketing, and lead nurturing.</p>
     </div>
@@ -182,3 +221,4 @@
 
 </body>
 </html>
+
