--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+  <meta name="google-site-verification" content="N_uMXbxcChaQF2zh9Ql-WP1vUze2tmLB5QJqRj7x-ZE" />
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
   <title>King Tide Marketing | SEO & Digital Marketing Agency in Langley BC</title>
