--- a/index.html
+++ b/index.html
@@ -188,29 +188,30 @@
   </div>
 
   <!-- Contact Section with Map -->
-  <div class="container contact-section">
-    <div class="row">
-      <div class="col-md-6">
-        <h3>Contact Information</h3>
-        <p><strong>Address:</strong> 4122 205b St, Langley, BC V3A 2B4, Canada</p>
-        <p><strong>Phone:</strong> <a href="tel:+16042008167">604-200-8167</a></p>
-        <p><strong>Email:</strong> <a href="mailto:info@kingtidemarketing.com">info@kingtidemarketing.com</a></p>
-        <p><strong>Business Hours:</strong> Open 24 hours, daily</p>
-        <p><strong>Service Areas:</strong> Greater Vancouver, Surrey, Burnaby, Coquitlam, Richmond, North Vancouver, Remote across Canada</p>
-        <p><strong>Social:</strong>
-          <a href="https://www.facebook.com/kingtidemarketing" target="_blank">Facebook</a> |
-          <a href="https://www.instagram.com/kingtide.marketing/" target="_blank">Instagram</a> |
-          <a href="https://ca.linkedin.com/in/daniel-stead-64aa3b279" target="_blank">LinkedIn</a> |
-          <a href="https://www.youtube.com/@KingTideMarketing" target="_blank">YouTube</a>
-        </p>
-      </div>
-      <div class="col-md-6">
-        <div class="map-responsive">
-          <iframe src="https://www.google.com/maps?q=4122+205b+St,+Langley,+BC+V3A+2B4,+Canada&output=embed" allowfullscreen loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
-        </div>
+<div class="container contact-section">
+  <div class="row">
+    <div class="col-md-6">
+      <h3><a href="https://kingtidemarketing.com/" style="text-decoration: none; color: inherit;">Contact Information</a></h3>
+      <p><strong>Address:</strong> 4122 205b St, Langley, BC V3A 2B4, Canada</p>
+      <p><strong>Phone:</strong> <a href="tel:+16042008167">604-200-8167</a></p>
+      <p><strong>Email:</strong> <a href="mailto:info@kingtidemarketing.com">info@kingtidemarketing.com</a></p>
+      <p><strong>Business Hours:</strong> Open 24 hours, daily</p>
+      <p><strong>Service Areas:</strong> Greater Vancouver, Surrey, Burnaby, Coquitlam, Richmond, North Vancouver, Remote across Canada</p>
+      <p><strong>Social:</strong>
+        <a href="https://www.facebook.com/kingtidemarketing" target="_blank">Facebook</a> |
+        <a href="https://www.instagram.com/kingtide.marketing/" target="_blank">Instagram</a> |
+        <a href="https://ca.linkedin.com/in/daniel-stead-64aa3b279" target="_blank">LinkedIn</a> |
+        <a href="https://www.youtube.com/@KingTideMarketing" target="_blank">YouTube</a>
+      </p>
+    </div>
+    <div class="col-md-6">
+      <div class="map-responsive">
+        <iframe src="https://www.google.com/maps?q=4122+205b+St,+Langley,+BC+V3A+2B4,+Canada&output=embed" allowfullscreen loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
       </div>
     </div>
   </div>
+</div>
+
 
   <!-- Footer -->
   <footer class="footer text-center">
